Sat Aug  4 2012 Aleksey
	Bugfix: path issue with verification of hash files

Mon Jun 25 2012 Aleksey
	Bugfix: different BTIH were generated for the same file

Sun May 13 2012 Aleksey
	BugFix: python crashed on ia64

Tue Apr 17 2012 Aleksey
	* PHP bindings for librhash

Sat Apr 14 2012 Aleksey
	* === Version 1.2.9 ===

Fri Apr 13 2012 Aleksey, Sergey Basalaev
	* translations: de, en_AU, es, gl, it

Sun Apr 08 2012 Aleksey
	* Bugfix: handling UNC filenames on Windows
	* option --bt-batch for batch torrents

Sat Jan  7 2012 Aleksey
	* librhash: rhash_print_magnet function

Sun Nov 06 2011 Sergey Basalaev
	* .NET/Mono bindings to librhash

Wed Sep 14 2011 Aleksey
	* === Version 1.2.8 ===

Wed Sep 14 2011 Aleksey, SBasalaev
	* LibRHash bindings to Java, Perl, Python, Ruby

Tue Sep  6 2011 Aleksey
	* librhash: implemented auto-final feature, turned on by default

Tue Sep  6 2011 Aleksey, SBasalaev
	* Russian translation

Sat Sep  3 2011 Aleksey
	* Bugfix: not enough trailing '=' in a base64-encoded hash

Sat Aug 20 2011 Aleksey
	* Bugfix: fix broken --openssl option parsing
	* Bugfix: buffer overflow when using --embed-crc-delimiter
	* Bugfix: segmentation fault on SUSE Linux

Sun Aug 14 2011 Aleksey
	* === Version 1.2.7 ===

Sun Aug  7 2011 Aleksey
	* Bugfix: percents option was broken in v1.2.6

Fri Aug  5 2011 Aleksey
	* supported verification of sha256, sha512 and other hash sums

Mon Jul 11 2011 Aleksey
	* librhash: rhash_cancel() macro to cancel hashing from another thread

Fri Jun 24 2011 Aleksey
	* Bugfix: repaired default output encoding to be UTF-8 on Windows

Wed Jun 22 2011 Aleksey
	* Bugfix: crash on WinXP

Thu Jun 16 2011 Aleksey
	* === Version 1.2.6 ===

Sat Jun 11 2011 Aleksey
	* allowed options to be intermixed with file names in arbitrary order
	* switched option -G and the '%G' printf pattern to print GOST hash
	* Bugfix: --output failed for cyrillic file name

Wed Jun  8 2011 Aleksey
	* librhash: better shared library compilation/testing support
